--- a/docs/docs/integrations/tools/tavily_search.ipynb
+++ b/docs/docs/integrations/tools/tavily_search.ipynb
@@ -35,18 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f85b4089",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install -qU \"langchain-community>=0.2.11\" tavily-python"
    ]
@@ -106,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "8b3ddfe9-ca79-494c-a7ab-1f56d9407a64",
    "metadata": {},
    "outputs": [],
@@ -141,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "65310a8b-eb0c-4d9e-a618-4f4abe2414fc",
    "metadata": {},
    "outputs": [
@@ -150,17 +142,17 @@
       "text/plain": [
        "[{'url': 'https://www.nytimes.com/athletic/5636272/2024/07/14/carlos-alcaraz-novak-djokovic-wimbledon-final/',\n",
        "  'content': 'WIMBLEDON — Carlos Alcaraz beat Novak Djokovic in the Wimbledon final at the All England Club 6-2, 6-2, 7-6 on Sunday. The No 3 seed prevailed over the No 2 seed in a one-sided victory ...'},\n",
-       " {'url': 'https://www.theguardian.com/sport/live/2023/jul/16/wimbledon-mens-singles-final-2023-carlos-alcaraz-v-novak-djokovic-live?page=with:block-64b3ff568f08df28470056bf',\n",
-       "  'content': 'Carlos Alcaraz recovered from a set down to topple Djokovic 1-6, 7-6(6), 6-1, 3-6, 6-4 and win his first Wimbledon title in a battle for the ages'},\n",
-       " {'url': 'https://www.nytimes.com/athletic/live-blogs/wimbledon-2024-live-updates-alcaraz-djokovic-mens-final-result/kJJdTKhOgkZo/',\n",
-       "  'content': \"It was Djokovic's first straight-sets defeat at Wimbledon since the 2013 final, when he lost to Andy Murray. Below, The Athletic 's writers, Charlie Eccleshare and Matt Futterman, analyze the ...\"},\n",
-       " {'url': 'https://www.foxsports.com.au/tennis/wimbledon/fk-you-stars-explosion-stuns-wimbledon-as-massive-final-locked-in/news-story/41cf7d28a12845cdab6be4150a22a170',\n",
-       "  'content': 'The last time Djokovic and Wimbledon met was at the French Open in June when the Serb claimed victory in a third round tie which ended at 3:07 in the morning. On Friday, however, Djokovic was ...'},\n",
+       " {'url': 'https://sports.yahoo.com/live/wimbledon-mens-semifinals-carlos-alcaraz-novak-djokovic-set-to-face-off-in-wimbledon-final-rematch-121511865.html',\n",
+       "  'content': \"Carlos Alcaraz defeated Daniil Medvedev in Friday's first men's semifinal at Wimbledon, 6-7, 6-3, 6-4, 6-4. It's the second straight year that Alcaraz has knocked Medvedev out in the semifinals at ...\"},\n",
        " {'url': 'https://www.cnn.com/2024/07/09/sport/novak-djokovic-wimbledon-crowd-quarterfinals-spt-intl/index.html',\n",
-       "  'content': 'Novak Djokovic produced another impressive performance at Wimbledon on Monday to cruise into the quarterfinals, but the 24-time grand slam champion was far from happy after his win.'}]"
+       "  'content': 'Novak Djokovic produced another impressive performance at Wimbledon on Monday to cruise into the quarterfinals, but the 24-time grand slam champion was far from happy after his win.'},\n",
+       " {'url': 'https://www.cnn.com/2024/07/05/sport/andy-murray-wimbledon-farewell-ceremony-spt-intl/index.html',\n",
+       "  'content': \"It was an emotional night for three-time grand slam champion Andy Murray on Thursday, as the 37-year-old's Wimbledon farewell began with doubles defeat.. Murray will retire from the sport this ...\"},\n",
+       " {'url': 'https://www.nytimes.com/athletic/5635500/2024/07/13/wimbledon-final-djokovic-alcaraz-federer-record/',\n",
+       "  'content': \"Djokovic has won four of the five Wimbledon men's titles contested since 2018 (with the 2020 event cancelled) and only Alcaraz's success 12 months ago prevented him from emulating Federer's ...\"}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,17 +173,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "f90e33a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ToolMessage(content=[{'url': 'https://www.radiotimes.com/tv/sport/football/euro-2024-location/', 'content': \"Euro 2024 host cities. Germany have 10 host cities for Euro 2024, topped by the country's capital Berlin. Berlin. Cologne. Dortmund. Dusseldorf. Frankfurt. Gelsenkirchen. Hamburg.\"}, {'url': 'https://www.sportingnews.com/ca/soccer/news/list-euros-host-nations-uefa-european-championship-countries/85f8069d69c9f4ecd00c4900', 'content': 'The 2024 UEFA European Championship, more commonly known as Euro 2024, will mark the 17th edition of the tournament and is set to be hosted by Germany from June 14 to July 14.'}, {'url': 'https://footballgroundguide.com/euro-2024-host-nation', 'content': 'As the Euro 2024 host nation, Germany will play the opening match against Scotland on 14 June before clashing with Hungary and finally Switzerland in the group stages. It is not an easy group but Germany is the highest-ranked by FIFA in group A of the Euro 2024. Apart from European Championship access, Germany has also been a powerhouse in ...'}, {'url': 'https://www.sportingnews.com/us/soccer/news/where-euro-2024-host-nation-next-european-championships/fguxslt9krlghuf1rcn9yf4v', 'content': \"Germany will host Euro 2024, the next men's European Championships, from June 14 to July 14, 2024. Find out the 10 stadiums, the schedule, the format and the bidding process for the tournament.\"}, {'url': 'https://www.uefa.com/euro2024/news/0257-0e13b161b2e8-4a3fd5615e0c-1000--euro-2024-all-you-need-to-know/', 'content': \"Article top media content\\nArticle body\\nWhere will EURO 2024 be held?\\nGermany will host EURO 2024, having been chosen to stage the 17th edition of the UEFA European Championship at a UEFA Executive Committee meeting in Nyon on 27 September 2018. Host cities\\nEURO 2024 fixtures by venue\\nEURO 2024 fixtures by team\\nAlso visit\\nChange language\\nServices links and disclaimer\\n© 1998-2024 UEFA. Where and when will the final of UEFA EURO 2024 be played?\\nBerlin's Olympiastadion will stage the final on Sunday 14 July 2024.\\n The ten venues chosen to host games at the tournament include nine of the stadiums used at the 2006 World Cup plus the Düsseldorf Arena.\\n All you need to know\\nThursday, January 11, 2024\\nArticle summary\\nThree-time winners Germany will stage the UEFA European Championship in 2024.\\n\"}], name='tavily_search_results_json', tool_call_id='1')"
+       "ToolMessage(content='[{\"url\": \"https://www.radiotimes.com/tv/sport/football/euro-2024-location/\", \"content\": \"Euro 2024 host cities. Germany have 10 host cities for Euro 2024, topped by the country\\'s capital Berlin. Berlin. Cologne. Dortmund. Dusseldorf. Frankfurt. Gelsenkirchen. Hamburg.\"}, {\"url\": \"https://footballgroundguide.com/euro-2024-host-nation\", \"content\": \"As the Euro 2024 host nation, Germany will play the opening match against Scotland on 14 June before clashing with Hungary and finally Switzerland in the group stages. It is not an easy group but Germany is the highest-ranked by FIFA in group A of the Euro 2024. Apart from European Championship access, Germany has also been a powerhouse in ...\"}, {\"url\": \"https://www.sportingnews.com/us/soccer/news/where-euro-2024-host-nation-next-european-championships/fguxslt9krlghuf1rcn9yf4v\", \"content\": \"Germany will host Euro 2024, the next men\\'s European Championships, from June 14 to July 14, 2024. Find out the 10 stadiums, the schedule, the format and the bidding process for the tournament.\"}, {\"url\": \"https://www.bbc.com/sport/extra/8eaygdhsw3/Euro-2024-stadiums\", \"content\": \"In the summer of 2024, three-time winners Germany will host the European Championship finals for the second time. In 1988, eight teams took part in the event in West Germany, with 15 games played ...\"}, {\"url\": \"https://en.wikipedia.org/wiki/UEFA_Euro_2024\", \"content\": \"In November 2023, it was announced that EA Sports had picked up the rights for the UEFA Euro 2024 video game, and that the Euro 2024 downloadable update would be coming to EA Sports FC 24, EA Sports FC Mobile, and EA Sports FC Online in the summer of 2024.[53]\\\\nBroadcasting rights[edit]\\\\nThe International Broadcast Centre (IBC) will be located at the halls of the Leipzig Trade Fair in Leipzig, Germany.[54]\\\\nSponsorship[edit]\\\\nUEFA had the following sponsorship partners:[55]\\\\nOfficial Global Sponsors:\\\\nOfficial National Sponsors:\\\\n A public vote was used to select the name of the mascot, with options being \\\\\"Alb\\\\u00e4rt\\\\\", \\\\\"B\\\\u00e4rnardo\\\\\", \\\\\"B\\\\u00e4rnheart\\\\\" and \\\\\"Herzi von B\\\\u00e4r\\\\\".[75] Results were made public on July 5, with mascot\\'s name announced to be \\\\\"Alb\\\\u00e4rt\\\\\", getting 32% of the votes.[76]\\\\nMatch ball[edit]\\\\nThe official match ball of the tournament, \\\\\"Fussballliebe\\\\\", was unveiled by UEFA and Adidas on 15 November 2023.[77] Translated \\\\\"Love of football\\\\u201d in German, it features black wing shapes with red, blue, orange and green edges and curves to showcase the qualified nations vibrancy to the tournament, and how much love that fans around the world give to football. The logo depicts the Henri Delaunay Trophy with 24 coloured slices around the trophy representing the 24 participating nations, and the ellipse reflects the shape of the Olympiastadion.[50] In addition, each of the ten host cities has their own unique logo, featuring the following local sights:[51]\\\\nThe official slogan of the tournament is \\\\\"United by Football. The 23 remaining spots will be determined by a qualifying tournament; 20 spots were decided by the direct qualification of the winners and runners-up of the 10 qualifying groups, with the remaining three spots decided by play-offs.[30] Places in the play-offs were given to the teams that performed the best in the 2022\\\\u201323 UEFA Nations League who did not already qualify via the main qualifying tournament.[31] Various other stadiums, such as those in Bremen and M\\\\u00f6nchengladbach, were not selected.[11] The venues covered all the main regions of Germany, but the area with the highest number of venues at UEFA Euro 2024 is the Rhine-Ruhr metropolitan region in the state of North Rhine-Westphalia, with four of the ten host cities (Dortmund, D\\\\u00fcsseldorf, Gelsenkirchen and Cologne).[12]\\\\nTeam base camps[edit]\\\\nEach team chose a \\\\\"team base camp\\\\\" for its stay between the matches.\"}]', name='tavily_search_results_json', tool_call_id='1')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "af3123ad-7a02-40e5-b58e-7d56e23e5830",
    "metadata": {},
    "outputs": [],
@@ -236,29 +228,41 @@
     "# !pip install -qU langchain langchain-openai\n",
     "from langchain.chat_models import init_chat_model\n",
     "\n",
-    "llm = init_chat_model(model=\"gpt-4o\", model_provider=\"openai\")"
+    "llm = init_chat_model(model=\"gpt-4o\", model_provider=\"openai\", temperature=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "fdbf35b5-3aaf-4947-9ec6-48c21533fb95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"Barbora Krejcikova won the women's singles title at Wimbledon 2024. She defeated Jasmine Paolini in the final with a score of 6-2, 2-6, 6-4. This victory marked Krejcikova's second Grand Slam singles title.\", response_metadata={'token_usage': {'completion_tokens': 60, 'prompt_tokens': 663, 'total_tokens': 723}, 'model_name': 'gpt-4o-2024-05-13', 'system_fingerprint': 'fp_4e2b2da518', 'finish_reason': 'stop', 'logprobs': None}, id='run-10165060-e69e-4c66-bae9-7f93776dd7ff-0', usage_metadata={'input_tokens': 663, 'output_tokens': 60, 'total_tokens': 723})"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.runnables import RunnableConfig, chain\n",
     "\n",
+    "today = datetime.datetime.today().strftime(\"%D\")\n",
     "prompt = ChatPromptTemplate(\n",
     "    [\n",
-    "        (\"system\", \"You are a helpful assistant.\"),\n",
+    "        (\"system\", f\"You are a helpful assistant. The date today is {today}.\"),\n",
     "        (\"human\", \"{user_input}\"),\n",
     "        (\"placeholder\", \"{messages}\"),\n",
     "    ]\n",
     ")\n",
     "\n",
     "# specifying tool_choice will force the model to call this tool.\n",
-    "llm_with_tools = llm.bind_tools([tool], tool_choice=tool.name)\n",
+    "llm_with_tools = llm.bind_tools([tool])\n",
     "\n",
     "llm_chain = prompt | llm_with_tools\n",
     "\n",
@@ -279,7 +283,7 @@
    "id": "fb115693-e89e-40f2-a460-0d0d39a17963",
    "metadata": {},
    "source": [
-    "Here's the [LangSmith trace](...) for this run."
+    "Here's the [LangSmith trace](https://smith.langchain.com/public/2e9dd540-0bbc-4450-ba3e-d49bf2c7819d/r) for this run."
    ]
   },
   {
