--- a/docs/docs/integrations/tools/tavily_search.ipynb
+++ b/docs/docs/integrations/tools/tavily_search.ipynb
@@ -249,6 +249,8 @@
     }
    ],
    "source": [
+    "import datetime\n",
+    "\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.runnables import RunnableConfig, chain\n",
     "\n",
