--- a/docs/docs/integrations/vectorstores/milvus.ipynb
+++ b/docs/docs/integrations/vectorstores/milvus.ipynb
@@ -11,19 +11,34 @@
     "\n",
     "This notebook shows how to use functionality related to the Milvus vector database.\n",
     "\n",
-    "You'll need to install `langchain-milvus` with `pip install -qU langchain-milvus` to use this integration\n"
+    "## Setup\n",
+    "\n",
+    "You'll need to install `langchain-milvus` with `pip install -qU langchain-milvus` to use this integration, we will also download `langchain-ollama` package to use for embeddings.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a62cff8a-bcf7-4e33-bbbc-76999c2e3e20",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "grpcio-tools 1.65.1 requires grpcio>=1.65.1, but you have grpcio 1.63.0 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.1.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "%pip install --upgrade --quiet  langchain_milvus"
+    "%pip install -qU  langchain_milvus langchain-ollama"
    ]
   },
   {
@@ -31,119 +46,43 @@
    "id": "633addc3",
    "metadata": {},
    "source": [
-    "The latest version of pymilvus comes with a local vector database Milvus Lite, good for prototyping. If you have large scale of data such as more than a million docs, we recommend setting up a more performant Milvus server on [docker or kubernetes](https://milvus.io/docs/install_standalone-docker.md#Start-Milvus)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7a0f9e02-8eb0-4aef-b11f-8861360472ee",
-   "metadata": {},
-   "source": [
-    "We want to use OpenAIEmbeddings so we have to get the OpenAI API Key."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "8b6ed9cd-81b9-46e5-9c20-5aafca2844d0",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import getpass\n",
-    "import os\n",
+    "The latest version of pymilvus comes with a local vector database Milvus Lite, good for prototyping. If you have large scale of data such as more than a million docs, we recommend setting up a more performant Milvus server on [docker or kubernetes](https://milvus.io/docs/install_standalone-docker.md#Start-Milvus).\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = getpass.getpass(\"OpenAI API Key:\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "aac9563e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from langchain_community.document_loaders import TextLoader\n",
-    "from langchain_milvus.vectorstores import Milvus\n",
-    "from langchain_openai import OpenAIEmbeddings\n",
-    "from langchain_text_splitters import CharacterTextSplitter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a3c3999a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "loader = TextLoader(\"../../how_to/state_of_the_union.txt\")\n",
-    "documents = loader.load()\n",
-    "text_splitter = CharacterTextSplitter(chunk_size=1000, chunk_overlap=0)\n",
-    "docs = text_splitter.split_documents(documents)\n",
+    "### Credentials\n",
     "\n",
-    "embeddings = OpenAIEmbeddings()"
+    "No credentials are needed to use the `Milvus` vector store.\n",
+    "\n",
+    "## Instantiation\n",
+    "\n",
+    "We will use `langchain_ollama` embeddings for this notebook since they are free to use."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "dcf88bdf",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "from langchain_milvus import Milvus\n",
+    "from langchain_ollama import OllamaEmbeddings\n",
+    "embedding_function = OllamaEmbeddings(model=\"llama3\")\n",
+    "\n",
     "# The easiest way is to use Milvus Lite where everything is stored in a local file.\n",
     "# If you have a Milvus server you can use the server URI such as \"http://localhost:19530\".\n",
     "URI = \"./milvus_demo.db\"\n",
     "\n",
-    "vector_db = Milvus.from_documents(\n",
-    "    docs,\n",
-    "    embeddings,\n",
+    "vector_store = Milvus(\n",
+    "    embedding_function=embedding_function,\n",
     "    connection_args={\"uri\": URI},\n",
     ")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "a8c513ab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"What did the president say about Ketanji Brown Jackson\"\n",
-    "docs = vector_db.similarity_search(query)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "fc516993",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Tonight. I call on the Senate to: Pass the Freedom to Vote Act. Pass the John Lewis Voting Rights Act. And while you’re at it, pass the Disclose Act so Americans can know who is funding our elections. \\n\\nTonight, I’d like to honor someone who has dedicated his life to serve this country: Justice Stephen Breyer—an Army veteran, Constitutional scholar, and retiring Justice of the United States Supreme Court. Justice Breyer, thank you for your service. \\n\\nOne of the most serious constitutional responsibilities a President has is nominating someone to serve on the United States Supreme Court. \\n\\nAnd I did that 4 days ago, when I nominated Circuit Court of Appeals Judge Ketanji Brown Jackson. One of our nation’s top legal minds, who will continue Justice Breyer’s legacy of excellence.'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "docs[0].page_content"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "e40d558b",
+   "id": "cae1a7d5",
    "metadata": {},
    "source": [
     "### Compartmentalize the data with Milvus Collections\n",
@@ -153,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82c00f6e",
+   "id": "c07cd24b",
    "metadata": {},
    "source": [
     "Here's how you can create a new collection"
@@ -161,22 +100,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f7ff38ab",
+   "execution_count": 16,
+   "id": "c6f4973d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vector_db = Milvus.from_documents(\n",
-    "    docs,\n",
-    "    embeddings,\n",
-    "    collection_name=\"collection_1\",\n",
+    "from langchain_core.documents import Document\n",
+    "\n",
+    "vector_store_saved = Milvus.from_documents(\n",
+    "    [Document(page_content=\"foo!\")],\n",
+    "    embedding_function,\n",
+    "    collection_name=\"langchain_example\",\n",
     "    connection_args={\"uri\": URI},\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "891cec1f",
+   "id": "3b12df8c",
    "metadata": {},
    "source": [
     "And here is how you retrieve that stored collection"
@@ -184,24 +125,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e9e873e9",
+   "execution_count": 17,
+   "id": "12817d16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vector_db = Milvus(\n",
-    "    embeddings,\n",
+    "vector_store_loaded = Milvus(\n",
+    "    embedding_function,\n",
     "    connection_args={\"uri\": URI},\n",
-    "    collection_name=\"collection_1\",\n",
+    "    collection_name=\"langchain_example\",\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9cc65535",
+   "id": "f1fc3818",
    "metadata": {},
    "source": [
-    "After retrieval you can go on querying it as usual."
+    "## Manage vector store\n",
+    "\n",
+    "### Add items to vector store"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3ced24f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '2', '3']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "document_1 = Document(\n",
+    "    page_content=\"foo\",\n",
+    "    metadata={\"source\": \"https://example.com\"}\n",
+    ")\n",
+    "\n",
+    "document_2 = Document(\n",
+    "    page_content=\"bar\",\n",
+    "    metadata={\"source\": \"https://example.com\"}\n",
+    ")\n",
+    "\n",
+    "document_3 = Document(\n",
+    "    page_content=\"baz\",\n",
+    "    metadata={\"source\": \"https://example.com\"}\n",
+    ")\n",
+    "\n",
+    "documents = [document_1, document_2, document_3]\n",
+    "\n",
+    "vector_store.add_documents(documents=documents,ids=[\"1\",\"2\",\"3\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e23c22d8",
+   "metadata": {},
+   "source": [
+    "### Delete items from vector store"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1f387fa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(insert count: 0, delete count: 1, upsert count: 0, timestamp: 0, success count: 0, err count: 0, cost: 0)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector_store.delete(ids=[\"3\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb12fa75",
+   "metadata": {},
+   "source": [
+    "## Query vector store\n",
+    "\n",
+    "Once your vector store has been created and the relevant documents have been added you will most likely wish to query it during the running of your chain or agent. \n",
+    "\n",
+    "### Query directly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "35801a55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* bar [{'pk': '2', 'source': 'https://example.com'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = vector_store.similarity_search(query=\"thud\",k=1,filter={\"source\":\"https://another-example.com\"})\n",
+    "for doc in results:\n",
+    "    print(f\"* {doc.page_content} [{doc.metadata}]\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35574409",
+   "metadata": {},
+   "source": [
+    "If you want to execute a similarity search and receive the corresponding scores you can run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c360af3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* [SIM=21192.628906] bar [{'pk': '2', 'source': 'https://example.com'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = vector_store.similarity_search_with_score(query=\"thud\",k=1,filter={\"source\":\"https://example.com\"})\n",
+    "for doc, score in results:\n",
+    "    print(f\"* [SIM={score:3f}] {doc.page_content} [{doc.metadata}]\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14db337f",
+   "metadata": {},
+   "source": [
+    "For a full list of all the search options available when using the `Milvus` vector store, you can visit the [API reference](https://api.python.langchain.com/en/latest/vectorstores/langchain_milvus.vectorstores.milvus.Milvus.html).\n",
+    "\n",
+    "### Query by turning into retriever\n",
+    "\n",
+    "You can also transform the vector store into a retriever for easier usage in your chains. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f6d9357c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(metadata={'pk': '2', 'source': 'https://example.com'}, page_content='bar')]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retriever = vector_store.as_retriever(\n",
+    "    search_type=\"mmr\",\n",
+    "    search_kwargs={\"k\": 1}\n",
+    ")\n",
+    "retriever.invoke(\"thud\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ac953f1",
+   "metadata": {},
+   "source": [
+    "Using retriever in a simple RAG chain:\n",
+    "\n",
+    "### WARNING\n",
+    "\n",
+    "To run this cell, you need to be able to use the `ChatOpenAI` chat model. Learn about how to set it up by visiting [this page](https://python.langchain.com/v0.2/docs/integrations/chat/openai/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7bbe3b95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I\\'m sorry, I don\\'t have enough context to answer the question about \"thud\" in relation to a bar.'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain import hub\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
+    "\n",
+    "prompt = hub.pull(\"rlm/rag-prompt\")\n",
+    "\n",
+    "def format_docs(docs):\n",
+    "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
+    "rag_chain = (\n",
+    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
+    "    | prompt\n",
+    "    | llm\n",
+    "    | StrOutputParser()\n",
+    ")\n",
+    "\n",
+    "rag_chain.invoke(\"thud\")"
    ]
   },
   {
@@ -325,47 +485,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89756e9e",
+   "id": "f1a873c5",
    "metadata": {},
    "source": [
-    "### To delete or upsert (update/insert) one or more entities"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21c4edcf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain_core.documents import Document\n",
+    "## API reference\n",
     "\n",
-    "# Insert data sample\n",
-    "docs = [\n",
-    "    Document(page_content=\"foo\", metadata={\"id\": 1}),\n",
-    "    Document(page_content=\"bar\", metadata={\"id\": 2}),\n",
-    "    Document(page_content=\"baz\", metadata={\"id\": 3}),\n",
-    "]\n",
-    "vector_db = Milvus.from_documents(\n",
-    "    docs,\n",
-    "    embeddings,\n",
-    "    connection_args={\"uri\": URI},\n",
-    ")\n",
-    "\n",
-    "# Search pks (primary keys) using expression\n",
-    "expr = \"id in [1,2]\"\n",
-    "pks = vector_db.get_pks(expr)\n",
-    "\n",
-    "# Delete entities by pks\n",
-    "result = vector_db.delete(pks)\n",
-    "\n",
-    "# Upsert (Update/Insert)\n",
-    "new_docs = [\n",
-    "    Document(page_content=\"new_foo\", metadata={\"id\": 1}),\n",
-    "    Document(page_content=\"new_bar\", metadata={\"id\": 2}),\n",
-    "    Document(page_content=\"upserted_bak\", metadata={\"id\": 3}),\n",
-    "]\n",
-    "upserted_pks = vector_db.upsert(pks, new_docs)"
+    "For detailed documentation of all __ModuleName__VectorStore features and configurations head to the API reference: https://api.python.langchain.com/en/latest/vectorstores/langchain_milvus.vectorstores.milvus.Milvus.html"
    ]
   }
  ],
@@ -385,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
