--- a/libs/cli/langchain_cli/integration_template/docs/vectorstores.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/vectorstores.ipynb
@@ -67,15 +67,13 @@
     "import getpass\n",
     "import os\n",
     "\n",
-    "import os\n",
-    "\n",
     "if not os.getenv(\"__MODULE_NAME___API_KEY\"):\n",
-    "    import getpass\n",
     "    os.environ[\"__MODULE_NAME___API_KEY\"] = getpass.getpass(\"Enter your __ModuleName__ API key: \")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "7f98392b",
    "metadata": {},
    "source": [
     "If you want to get automated tracing of your model calls you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
@@ -84,6 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e7b6a6e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,14 +145,14 @@
     "    metadata={\"source\": \"https://example.com\"}\n",
     ")\n",
     "\n",
-    "document_2 = Document(\n",
+    "document_3 = Document(\n",
     "    page_content=\"baz\",\n",
     "    metadata={\"source\": \"https://example.com\"}\n",
     ")\n",
     "\n",
-    "documents = [document_1, document_2]\n",
+    "documents = [document_1, document_2, document_3]\n",
     "\n",
-    "vector_store.add_documents(documents=documents,ids=[\"1\",\"2\"])"
+    "vector_store.add_documents(documents=documents,ids=[\"1\",\"2\",\"3\"])"
    ]
   },
   {
@@ -224,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = vector_store.similarity_search(query=\"thud\",k=1,filter={\"source\":\"https://example.com\"})\n",
+    "results = vector_store.similarity_search(query=\"thud\",k=1,filter={\"source\":\"https://another-example.com\"})\n",
     "for doc in results:\n",
     "    print(f\"* {doc.page_content} [{doc.metadata}]\")"
    ]
@@ -270,7 +269,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "retriever = vector_store.as_retriever()\n",
+    "retriever = vector_store.as_retriever(\n",
+    "    search_type=\"mmr\",\n",
+    "    search_kwargs={\"k\": 1}\n",
+    ")\n",
     "retriever.invoke(\"thud\")"
    ]
   },
