--- a/docs/docs/integrations/vectorstores/astradb.ipynb
+++ b/docs/docs/integrations/vectorstores/astradb.ipynb
@@ -89,22 +89,42 @@
     "\n",
     "*Integrated embedding computation*. Alternatively, you can use the [Vectorize](https://www.datastax.com/blog/simplifying-vector-embedding-generation-with-astra-vectorize) feature of Astra DB and simply specify the name of a supported embedding model when creating the store. The embedding computations are entirely handled within the database. (To proceed with this method, you must have enabled the desired embedding integration for your database, as described [in the docs](https://docs.datastax.com/en/astra-db-serverless/databases/embedding-generation.html).)\n",
     "\n",
+    "### Selecting an embedding function\n",
+    "\n",
+    "To run the rest of the code in this notebook, you will need to define an embedding function. If you just want to run the code as fast as possible, use the `FakeEmbeddings` class which requires no setup. If you would like to use an actual embedding function, we are going to show how to use the `langchain_ollama` embedding function. You can read more about how to set it up at [this page](https://python.langchain.com/v0.2/docs/integrations/text_embedding/ollama/).\n",
+    "\n",
+    "```{=mdx}\n",
+    "import Tabs from '@theme/Tabs';\n",
+    "import TabItem from '@theme/TabItem';\n",
+    "import CodeBlock from \"@theme/CodeBlock\";\n",
+    "\n",
+    "<Tabs>\n",
+    "  <TabItem value=\"fake\" label=\"Fake Embedding\" default>\n",
+    "    <CodeBlock language=\"python\">\n",
+    "      {'from langchain_core.embeddings import FakeEmbeddings\\n\\nembedding_function = FakeEmbeddings(size=4096)'}\n",
+    "    </CodeBlock>\n",
+    "  </TabItem>\n",
+    "  <TabItem value=\"conda\" label=\"Ollama Embedding\">\n",
+    "    <CodeBlock language=\"python\">\n",
+    "      {'from langchain_ollama import OllamaEmbeddings\\n\\nembedding_function = OllamaEmbeddings(model=\"llama3\")'}\n",
+    "    </CodeBlock>\n",
+    "  </TabItem>\n",
+    "</Tabs>\n",
+    "```\n",
+    "\n",
     "### Explicit Instantiation\n",
     "\n",
-    "We are going to use the `langchain_ollama` embedding function for the explicit embedding example since it is free. You can read more about it at [this page](https://python.langchain.com/v0.2/docs/integrations/text_embedding/ollama/)."
+    "Once you have selected an embedding function, we are ready to instantiate our vector store."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0b32730d-176e-414c-9d91-fd3644c54211",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_astradb import AstraDBVectorStore\n",
-    "from langchain_ollama import OllamaEmbeddings\n",
-    "\n",
-    "embedding_function = OllamaEmbeddings(model=\"llama3\")\n",
     "\n",
     "vector_store = AstraDBVectorStore(\n",
     "    embedding=embedding_function,\n",
