standardize table columns

--- a/docs/docs/integrations/toolkits/index.mdx
+++ b/docs/docs/integrations/toolkits/index.mdx
@@ -12,7 +12,7 @@ that share common authentication, services, or other objects. They can be implem
 This table lists common toolkits.
 
 
-| Docs | API Reference |
+| Toolkit | Package |
 |------|---------------|
 | [GitHubToolkit](/docs/integrations/toolkits/github) | [langchain_community.agent_toolkits.github](https://api.python.langchain.com/en/latest/agent_toolkits/langchain_community.agent_toolkits.github.toolkit.GitHubToolkit.html) |
 | [GmailToolkit](/docs/integrations/toolkits/gmail) | [langchain_google_community.gmail.toolkit](https://api.python.langchain.com/en/latest/gmail/langchain_google_community.gmail.toolkit.GmailToolkit.html) |
