--- a/libs/cli/langchain_cli/integration_template/docs/retrievers.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/retrievers.ipynb
@@ -24,9 +24,9 @@
     "\n",
     "### Integration details\n",
     "\n",
-    "| Retriever | Namespace | Native async | Local |\n",
+    "| Retriever | Native async | Local | Package |\n",
     "| :--- | :--- | :---: | :---: |\n",
-    "[__ModuleName__Retriever](https://api.python.langchain.com/en/latest/retrievers/__package_name__.retrievers.__module_name__.__ModuleName__Retriever.html) | __package_name__.retrievers | ❌ | ❌ |\n",
+    "[__ModuleName__Retriever](https://api.python.langchain.com/en/latest/retrievers/__package_name__.retrievers.__module_name__.__ModuleName__Retriever.html) | ❌ | ❌ | __package_name__.retrievers |\n",
     "\n",
     "\n",
     "## Setup\n",
