--- a/docs/docs/integrations/retrievers/bedrock.ipynb
+++ b/docs/docs/integrations/retrievers/bedrock.ipynb
@@ -49,7 +49,7 @@
    "id": "238c0ceb-d4b6-409e-bed9-d30143d2f2c9",
    "metadata": {},
    "source": [
-    "If you want to get automated tracing from runs of individual tools, you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
+    "If you want to get automated tracing from individual queries, you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
    ]
   },
   {
