--- a/docs/docs/integrations/retrievers/elasticsearch_retriever.ipynb
+++ b/docs/docs/integrations/retrievers/elasticsearch_retriever.ipynb
@@ -46,7 +46,7 @@
    "id": "e13a7b58-3a56-4ce6-a4d5-81a8dd2080df",
    "metadata": {},
    "source": [
-    "If you want to get automated tracing from runs of individual tools, you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
+    "If you want to get automated tracing from individual queries, you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
    ]
   },
   {
