--- a/libs/cli/langchain_cli/integration_template/docs/retrievers.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/retrievers.ipynb
@@ -39,7 +39,7 @@
    "id": "72ee0c4b-9764-423a-9dbf-95129e185210",
    "metadata": {},
    "source": [
-    "If you want to get automated tracing from runs of individual tools, you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
+    "If you want to get automated tracing from individual queries, you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
    ]
   },
   {
