--- a/docs/docs/integrations/retrievers/tavily.ipynb
+++ b/docs/docs/integrations/retrievers/tavily.ipynb
@@ -22,9 +22,9 @@
     "\n",
     "### Integration details\n",
     "\n",
-    "| Retriever | Namespace | Native async | Local |\n",
+    "| Retriever | Native async | Local | Package |\n",
     "| :--- | :--- | :---: | :---: |\n",
-    "[TavilySearchAPIRetriever](https://api.python.langchain.com/en/latest/retrievers/langchain_community.retrievers.tavily_search_api.TavilySearchAPIRetriever.html) | langchain_community.retrievers | ❌ | ❌ |\n",
+    "[TavilySearchAPIRetriever](https://api.python.langchain.com/en/latest/retrievers/langchain_community.retrievers.tavily_search_api.TavilySearchAPIRetriever.html) | ❌ | ❌ | langchain_community.retrievers |\n",
     "\n",
     "## Setup"
    ]
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to get automated tracing from runs of individual tools, you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
+    "If you want to get automated tracing from individual queries, you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
    ]
   },
   {
