--- a/docs/docs/integrations/text_embedding/index.mdx
+++ b/docs/docs/integrations/text_embedding/index.mdx
@@ -7,6 +7,9 @@ sidebar_class_name: hidden
 
 **Embedding model** classes are implemented by inheriting the [Embeddings](https://api.python.langchain.com/en/latest/embeddings/langchain_core.embeddings.Embeddings.html) class.
 
+import { CategoryTable } from '@theme/FeatureTables';
+
+<CategoryTable />
 
 Model|Package
 :-|:-:
