--- a/docs/docs/integrations/retrievers/index.mdx
+++ b/docs/docs/integrations/retrievers/index.mdx
@@ -21,7 +21,7 @@ This table lists common retrievers.
 |-----------|--------------|-------|---------|
 | [AmazonKnowledgeBasesRetriever](/docs/integrations/retrievers/bedrock) | ❌ | ❌ | [langchain_aws.retrievers](https://api.python.langchain.com/en/latest/retrievers/langchain_aws.retrievers.bedrock.AmazonKnowledgeBasesRetriever.html) |
 | [AzureAISearchRetriever](/docs/integrations/retrievers/azure_ai_search) | ✅ | ❌ | [langchain_community.retrievers](https://api.python.langchain.com/en/latest/retrievers/langchain_community.retrievers.azure_ai_search.AzureAISearchRetriever.html) |
-| [ElasticsearchRetriever](/docs/integrations/retrievers/elasticsearch_retriever) | ❌ | ❌ | [langchain_elasticsearch](https://api.python.langchain.com/en/latest/retrievers/langchain_elasticsearch.retrievers.ElasticsearchRetriever.html) |
+| [ElasticsearchRetriever](/docs/integrations/retrievers/elasticsearch_retriever) | ❌ | ✅ | [langchain_elasticsearch](https://api.python.langchain.com/en/latest/retrievers/langchain_elasticsearch.retrievers.ElasticsearchRetriever.html) |
 | [MilvusCollectionHybridSearchRetriever](/docs/integrations/retrievers/milvus_hybrid_search) | ❌ | ❌ | [langchain_milvus](https://api.python.langchain.com/en/latest/retrievers/langchain_milvus.retrievers.milvus_hybrid_search.MilvusCollectionHybridSearchRetriever.html) |
 | [TavilySearchAPIRetriever](/docs/integrations/retrievers/tavily) | ❌ | ❌ | [langchain_community.retrievers](https://api.python.langchain.com/en/latest/retrievers/langchain_community.retrievers.tavily_search_api.TavilySearchAPIRetriever.html) |
 | [VertexAISearchRetriever](/docs/integrations/retrievers/google_vertex_ai_search) | ❌ | ❌ | [langchain_google_community.vertex_ai_search](https://api.python.langchain.com/en/latest/vertex_ai_search/langchain_google_community.vertex_ai_search.VertexAISearchRetriever.html) |
