--- a/docs/docs/integrations/retrievers/elasticsearch_retriever.ipynb
+++ b/docs/docs/integrations/retrievers/elasticsearch_retriever.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "| Retriever | Native async | Local | Package |\n",
     "| :--- | :--- | :---: | :---: |\n",
-    "[ElasticsearchRetriever](https://api.python.langchain.com/en/latest/retrievers/langchain_elasticsearch.retrievers.ElasticsearchRetriever.html) | ❌ | ❌ | langchain_elasticsearch |\n",
+    "[ElasticsearchRetriever](https://api.python.langchain.com/en/latest/retrievers/langchain_elasticsearch.retrievers.ElasticsearchRetriever.html) | ❌ | ✅ | langchain_elasticsearch |\n",
     "\n",
     "\n",
     "## Setup\n",
