--- a/docs/docs/integrations/retrievers/google_vertex_ai_search.ipynb
+++ b/docs/docs/integrations/retrievers/google_vertex_ai_search.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "sidebar_label: __ModuleName__\n",
+    "sidebar_label: Google Vertex AI Search\n",
     "---"
    ]
   },
