--- a/docs/docs/integrations/retrievers/bedrock.ipynb
+++ b/docs/docs/integrations/retrievers/bedrock.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "sidebar_label: __ModuleName__\n",
+    "sidebar_label: Bedrock (Knowledge Bases)\n",
     "---"
    ]
   },
