--- a/docs/docs/integrations/retrievers/index.mdx
+++ b/docs/docs/integrations/retrievers/index.mdx
@@ -5,16 +5,18 @@ sidebar_class_name: hidden
 
 # Retrievers
 
-A **retriever** is an interface that returns documents given an unstructured query.
+A [retriever](/docs/concepts/#retrievers) is an interface that returns documents given an unstructured query.
 It is more general than a vector store.
 A retriever does not need to be able to store documents, only to return (or retrieve) them.
 Retrievers can be created from vector stores, but are also broad enough to include [Wikipedia search](/docs/integrations/retrievers/wikipedia/) and [Amazon Kendra](/docs/integrations/retrievers/amazon_kendra_retriever/).
 
-Retrievers accept a string query as input and return a list of Document's as output.
+Retrievers accept a string query as input and return a list of [Documents](https://api.python.langchain.com/en/latest/documents/langchain_core.documents.base.Document.html) as output.
 
 For specifics on how to use retrievers, see the [relevant how-to guides here](/docs/how_to/#retrievers).
 
-This table lists common retrievers.
+Note that all [vector stores](/docs/concepts/#vector-stores) can be [cast to retrievers](/docs/how_to/vectorstore_retriever/).
+Refer to the vector store [integration docs](/docs/integrations/vectorstores/) for available vector stores.
+This table lists custom retrievers, implemented via subclassing [BaseRetriever](/docs/how_to/custom_retriever/).
 
 
 | Retriever | Native async | Local | Package |
