--- a/docs/docs/integrations/retrievers/bedrock.ipynb
+++ b/docs/docs/integrations/retrievers/bedrock.ipynb
@@ -29,9 +29,9 @@
     "\n",
     "### Integration details\n",
     "\n",
-    "| Retriever | Native async | Local | Package |\n",
-    "| :--- | :--- | :---: | :---: |\n",
-    "[AmazonKnowledgeBasesRetriever](https://api.python.langchain.com/en/latest/retrievers/langchain_aws.retrievers.bedrock.AmazonKnowledgeBasesRetriever.html) | ❌ | ❌ | langchain_aws.retrievers |\n"
+    "| Retriever | Bring your own docs | Self-host | Cloud offering | Package |\n",
+    "| :--- | :--- | :---: | :---: | :---: |\n",
+    "[AmazonKnowledgeBasesRetriever](https://api.python.langchain.com/en/latest/retrievers/langchain_aws.retrievers.bedrock.AmazonKnowledgeBasesRetriever.html) | ✅ | ❌ | ✅ | langchain_aws.retrievers |\n"
    ]
   },
   {
