--- a/docs/docs/integrations/retrievers/google_vertex_ai_search.ipynb
+++ b/docs/docs/integrations/retrievers/google_vertex_ai_search.ipynb
@@ -29,9 +29,9 @@
     "\n",
     "### Integration details\n",
     "\n",
-    "| Retriever | Native async | Local | Package |\n",
-    "| :--- | :--- | :---: | :---: |\n",
-    "[VertexAISearchRetriever](https://api.python.langchain.com/en/latest/vertex_ai_search/langchain_google_community.vertex_ai_search.VertexAISearchRetriever.html) | ❌ | ❌ | langchain_google_community.vertex_ai_search |\n",
+    "| Retriever | Bring your own docs | Self-host | Cloud offering | Package |\n",
+    "| :--- | :--- | :---: | :---: | :---: |\n",
+    "[VertexAISearchRetriever](https://api.python.langchain.com/en/latest/vertex_ai_search/langchain_google_community.vertex_ai_search.VertexAISearchRetriever.html) | ✅ | ❌ | ✅ | langchain_google_community.vertex_ai_search |\n",
     "\n",
     "\n",
     "## Setup\n",
