--- a/docs/docs/integrations/retrievers/tavily.ipynb
+++ b/docs/docs/integrations/retrievers/tavily.ipynb
@@ -22,9 +22,9 @@
     "\n",
     "### Integration details\n",
     "\n",
-    "| Retriever | Native async | Local | Package |\n",
-    "| :--- | :--- | :---: | :---: |\n",
-    "[TavilySearchAPIRetriever](https://api.python.langchain.com/en/latest/retrievers/langchain_community.retrievers.tavily_search_api.TavilySearchAPIRetriever.html) | ❌ | ❌ | langchain_community.retrievers |\n",
+    "| Retriever | Bring your own docs | Self-host | Cloud offering | Package |\n",
+    "| :--- | :--- | :---: | :---: | :---: |\n",
+    "[TavilySearchAPIRetriever](https://api.python.langchain.com/en/latest/retrievers/langchain_community.retrievers.tavily_search_api.TavilySearchAPIRetriever.html) | ❌ | ❌ | ❌ | langchain_community.retrievers |\n",
     "\n",
     "## Setup"
    ]
