split into two tables

--- a/libs/cli/langchain_cli/integration_template/docs/retrievers.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/retrievers.ipynb
@@ -24,10 +24,19 @@
     "\n",
     "### Integration details\n",
     "\n",
-    "| Retriever | Bring your own docs | Self-host | Cloud offering | Package |\n",
-    "| :--- | :--- | :---: | :---: | :---: |\n",
-    "[__ModuleName__Retriever](https://api.python.langchain.com/en/latest/retrievers/__package_name__.retrievers.__module_name__.__ModuleName__Retriever.html) | ❌ | ❌ | ❌ | __package_name__ |\n",
+    "TODO: Select one of the tables below, as appropriate.\n",
     "\n",
+    "1: Bring-your-own data (i.e., index and search a custom corpus of documents):\n",
+    "\n",
+    "| Retriever | Self-host | Cloud offering | Package |\n",
+    "| :--- | :--- | :---: | :---: |\n",
+    "[__ModuleName__Retriever](https://api.python.langchain.com/en/latest/retrievers/__package_name__.retrievers.__module_name__.__ModuleName__Retriever.html) | ❌ | ❌ | __package_name__ |\n",
+    "\n",
+    "2: External index (e.g., constructed from Internet data or similar)):\n",
+    "\n",
+    "| Retriever | Source | Package |\n",
+    "| :--- | :--- | :---: |\n",
+    "[__ModuleName__Retriever](https://api.python.langchain.com/en/latest/retrievers/__package_name__.retrievers.__module_name__.__ModuleName__Retriever.html) | Source description | __package_name__ |\n",
     "\n",
     "## Setup\n",
     "\n",
