--- a/docs/docs/integrations/text_embedding/index.mdx
+++ b/docs/docs/integrations/text_embedding/index.mdx
@@ -9,8 +9,4 @@ sidebar_class_name: hidden
 
 import { CategoryTable } from '@theme/FeatureTables';
 
-<CategoryTable />
-
-Model|Package
-:-|:-:
-[Cohere](./cohere.ipynb)|[`langchain-cohere`](https://pypi.org/project/langchain-cohere/)
+<CategoryTable category="text_embedding" />
